--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "capacitor-firebase-auth",
-	"version": "3.0.0",
+	"name": "@iotechpis/capacitor-firebase-auth",
+	"version": "3.1.0",
 	"description": "Capacitor plugin for Firebase Authentication",
 	"main": "dist/esm/index.js",
 	"types": "dist/esm/index.d.ts",
@@ -48,9 +48,9 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/baumblatt/capacitor-firebase-auth.git"
+		"url": "https://github.com/iotechpis/capacitor-firebase-auth.git"
 	},
 	"bugs": {
-		"url": "https://github.com/baumblatt/capacitor-firebase-auth.git/issues"
+		"url": "https://github.com/iotechpis/capacitor-firebase-auth.git/issues"
 	}
 }
